# cmake-test

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
cmake/: GoogleTest.cmake
docs/: docs.md
include/myproj/: greeter.h
src/: greeter.cpp  main.cpp
tests/: test_greeter.cpp
